add fire dispatch data, and call v1

--- a/test/fixtures/fire_dispatches.yml
+++ b/test/fixtures/fire_dispatches.yml
@@ -15,5 +15,5 @@ two:
   address: 4th & Pike
   occurred: 2010-08-23 18:12:13
   units: E5 L2 M3
-  lat: 9.99
-  lng: 9.99
+  lat: 47.58227403
+  lng: -122.3645428
