--- a/test/fixtures/police_reports.yml
+++ b/test/fixtures/police_reports.yml
@@ -26,5 +26,17 @@ two:
   updated_at: 2010-08-21 18:19:10
   lat: 47.58227403
   lng: -122.3645428
-  crime_type_id: 10
+  crime_type_id: 11
 
+three:
+  id: 3
+  report_number: 2010232312
+  address: 11XX BLOCK OF NW OTHER ST
+  icon_url: Weapon.png
+  incident_category_id: 12
+  occurdate: <%= 12.hours.ago %>
+  created_at: 2010-08-23 18:19:10
+  updated_at: 2010-08-23 19:20:11
+  lat: 47.6123
+  lng: -122.3457
+  crime_type_id: 12
